style.css
html {
    min-height: 100%;
    overscroll-behavior: none;
}
body {
    font-family: Inter;
    color: #575757;
    background-color: #faffed;
    background: linear-gradient(-45deg, #ffd5e7, #FCF7F8, #dcf0ff);
	background-size: 400% 400%;
	animation: gradient 11s ease infinite;
}
@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}
#top {
    position: relative;
    top: 125px;
    margin-left: 90px;
}
.greeting {
    font-size: 35px;
    transition: all .3s ease-in-out;
}
.greeting:hover {
    color: #ffc0dd;
}
.info {
    margin-bottom: 1px;
}
.social {
    width: 22px;
    height: 22px;
    display: inline;
    vertical-align: middle;
    margin-left: 8px;
    margin-right: 8px;
    transition: ease-in-out .3s;
    filter: invert(55%);
}
.social:hover {
    filter: invert(15%);
}
.toolbox, .eider, .shitc0ver, .nitroless {
    color: inherit;
    text-decoration: underline;
    transition: all .3s ease-in-out;
}
.toolbox:hover {
    color: lightskyblue
}
.eider:hover {
    color: #5865f2;
}
.shitc0ver:hover {
    color: rgba(56, 142, 255, 0.842);
}
.nitroless:hover {
    color: #b8b8b8;
}
.llsc12 {
    color: inherit;
    text-decoration: underline;
    transition: all .3s ease-in-out;
}
.llsc12:hover {
    color: #fc2c35;
}
.pfp {
    float: right;
    margin-right: 130px;
    position: relative;
    bottom: 110px;
    width: 250px;
    height: 250px;
    vertical-align: middle;
    transition: all .3s ease-in-out;
}
.social-desktop {
    text-align: center;
    align-content: center;
    position: relative;
    top: 25px;
}
.social-mobile {
    text-align: center;
    align-content: center;
    position: relative;
    top: 25px;
    display: none;
}
@media screen and (max-width: 900px) {
    html {
        min-height: 100%;
        overscroll-behavior: none;
    }
    .greeting {
        font-size: 30px;
        padding-bottom: 15px;
    }
    #top {
        margin: 5px;
        position: relative;
        top: 30px;
        transform: none;
    }
    body {
        text-align: center;
        margin: 10px;
    }
    
    .pfp {
        display: none;
    }

    .social-desktop {
        display: none;
    }

    .social-mobile {
        display: block;
    }
    .info {
        margin-bottom: 0px;
    }
    .social {
        width: 25px;
        height: 25px;
    }
}

